<resources>
    <string name="app_name">GroovyAndroid</string>

    <string name="action_settings">Settings</string>
    <string name="address">Server Address</string>
    <string name="port">Server Port</string>
    <string name="secret">Secret</string>
    <string name="crytpo_type">Crypto Type</string>
    <string name="tun_address">Tunnel Address</string>
    <string name="tun_prefix_len">Tunnel Prefix Length</string>
    <string name="connect">Connect</string>
</resources>
