<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="3mm">

            <TextView style="@style/item" android:text="@string/address"/>
            <EditText style="@style/item" android:id="@+id/address"/>

            <TextView style="@style/item" android:text="@string/port"/>
            <EditText style="@style/item" android:id="@+id/port" android:inputType="number" android:text="60000"/>

            <TextView style="@style/item" android:text="@string/secret"/>
            <!--<EditText style="@style/item" android:id="@+id/secret" android:password="true"/>-->
            <EditText style="@style/item" android:id="@+id/secret" android:password="true"/>

            <TextView style="@style/item" android:text="@string/crytpo_type"/>
            <Spinner style="@style/item" android:id="@+id/crytpo_type"/>

            <TextView style="@style/item" android:text="@string/tun_address"/>
            <EditText style="@style/item" android:id="@+id/tun_address" android:text="10.7.0.3"/>

            <TextView style="@style/item" android:text="@string/tun_prefix_len"/>
            <EditText style="@style/item" android:id="@+id/tun_prefix_len" android:inputType="number" android:text="24"/>


            <Button style="@style/item" android:id="@+id/connect" android:text="@string/connect"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
